test/files/neg/t6446-show-phases.scala
//> using options -Vphases
//

// testing compiler flag output only
object Test extends App
